--- a/web/private/write/uploadBook_template.html
+++ b/web/private/write/uploadBook_template.html
@@ -18,10 +18,11 @@
 <body>
     <!-- The navigation bar config -->
     {% include "../../template_navbar.html" %} 
-
+	
     <div class='biggerPageClass'>
 	<h3 id='status_banner'></h3>
 	<h1>Volltexte hochladen</h1>
+	<i> Click on the headlines to see additional information on how to upload.</i>
 	<input class="inputStyle" type="file" id="fileUpID" multiple/>
     <br>
 
