Working on #228 and #217. This is now working for all pages currently including the topnavbar

--- a/web/books/metadata_template.html
+++ b/web/books/metadata_template.html
@@ -16,7 +16,7 @@
     </head>
 
 	<body itemscope itemtype="http://schema.org/Book">
-	    {% include "../catalogue/template_navbar.html" %}
+	    {% include "../template_navbar.html" %}
 
         <div class="metadata">
             <h1> {{ show }} </h1>
