--- a/web/catalogue/books/template.html
+++ b/web/catalogue/books/template.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-	{% include "../template_navbar.html" %}	
+	{% include "../../template_navbar.html" %}	
 	<header>
 	<h1>Index of all Books</h1>
 	<p>{{ length(books) }} books</p>
