--- a/web/catalogue/collections/template.html
+++ b/web/catalogue/collections/template.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-	{% include "../template_navbar.html" %}	
+	{% include "../../template_navbar.html" %}	
 	<header>
 	<h1>Catalogue: Collection</h1>
 	<p>{{ length(pillars) }} diffrent collections</p>
