--- a/web/catalogue/collections/template_collection.html
+++ b/web/catalogue/collections/template_collection.html
@@ -25,7 +25,7 @@
 
 
 <body>
-	{% include "../template_navbar.html" %}	
+	{% include "../../template_navbar.html" %}	
 	<header>
 	<h1>Books in Collection: {{pillar.name}}</h1>
 	<p>{{ length(books) }} books in this collection</p>
