--- a/web/catalogue/template.html
+++ b/web/catalogue/template.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-	{% include "template_navbar.html" %}
+	{% include "../template_navbar.html" %}
 	<header>
 	<h1>Catalogue categories</h1>
 	<p>{{ length(pages) }} categories</p>
