--- a/web/catalogue/years/template.html
+++ b/web/catalogue/years/template.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-	{% include "../template_navbar.html" %}	
+	{% include "../../template_navbar.html" %}	
 	<header>
 	<h1>Catalogue: Years</h1>
 	<p>Found books from {{ length(years) }} distinct years</p>
