--- a/web/catalogue/years/template_year.html
+++ b/web/catalogue/years/template_year.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-	{% include "../template_navbar.html" %}	
+	{% include "../../template_navbar.html" %}	
 	<header>
 	<h1>Book published in {{ year }}</h1>
 	<p>Found {{ length(books) }} books from the year {{ year }}</p>
