Working on #193 simplified the progress a lot more

--- a/web/catalogue/search_template.html
+++ b/web/catalogue/search_template.html
@@ -1,8 +1,2 @@
 <input placeholder="Search here..." oninput="on_search(this);"></input>
-<span id="filteropts" style="display: none;">
-	<p style="color: grey;">Filtering yielded: <span id="infoProgress"></span></p>
-	<div class="progress" id="progressField">
-		<span id="progressValue" class="progresValue">0%</span>
-		<progress id="searchProgress" value="0" max="100"></progress>
-	</div>
-</span>
+<p id='infoProgress' class='searchprogress'>Found <span id='num_results'></span> Matches | Filtered <span id='num_filtered'></span>/<span id='num_max_books'></span></p>
