Working on new ocr style

--- a/web/template_navbar.html
+++ b/web/template_navbar.html
@@ -26,7 +26,7 @@
 	</div>
 
 </nav>
-<footer>
+<footer style="display: none";>
     <dl>
         <dt>Generated:</dt>
         <dd itemprop="dataModified" content={{topnav.time}}>
