Making timestap visible at the bottom

--- a/web/template_navbar.html
+++ b/web/template_navbar.html
@@ -26,7 +26,7 @@
 	</div>
 
 </nav>
-<footer style="display: none";>
+<footer style="position: fixed; bottom: 50px; right: 50px";>
     <dl>
         <dt>Generated:</dt>
         <dd itemprop="dataModified" content={{topnav.time}}>
