Changed the pinning a bit

--- a/web/books/pages_template.html
+++ b/web/books/pages_template.html
@@ -33,7 +33,7 @@
 				</i>
 			</div>
 			<div>
-				<button onclick='TogglePin();return true;'>Pin</button>
+				<button onclick='TogglePin(this);return true;'>Pin</button>
 				<img id='fullbut' onclick='tooglefullscreen(this);' class='fullscreen' title='Toogle fullscreen mode' style='float: right; margin:0.5rem' src="/static/GetBooks/fullscreen-24px.svg"/>
 				<img id='tooglebut' onclick="read_mode(this);" class='fullscreen' style='float: right;margin:0.5rem;' title="Toggle image reader and split reader mode" src="/static/GetBooks/chrome_reader_mode-24px.svg"/>
 			</div>
