--- a/web/books/pages_template.html
+++ b/web/books/pages_template.html
@@ -27,18 +27,18 @@
 		<nav class='searchbox'>
 		    <div class='toprow'>
 			<a class="about" href="../" rel="index up">About this book</a>
-			<div>
+			<div style="align-self: center;">
 			<input id='srchbox' style='width:25%;border-radius: 20px;padding-left: 0.5rem;padding-right: 0.5rem;margin-left: 1rem;min-width: 10rem;margin-top: 0.5rem;text-align: center;' type='text' placeholder="search this book"/>
 				<i class="fa fa-search searchstyler" onclick='doCompleteNewSearch();return true;'>
 				</i>
 			</div>
 			<div>
-				<button onclick='TogglePin(this);return true;'>Pin</button>
+				<button class="tooglebut" onclick='TogglePin(this);return true;'>Pin</button>
 				<img id='fullbut' onclick='tooglefullscreen(this);' class='fullscreen' title='Toogle fullscreen mode' style='float: right; margin:0.5rem' src="/static/GetBooks/fullscreen-24px.svg"/>
 				<img id='tooglebut' onclick="read_mode(this);" class='fullscreen' style='float: right;margin:0.5rem;' title="Toggle image reader and split reader mode" src="/static/GetBooks/chrome_reader_mode-24px.svg"/>
 			</div>
 		    </div>
-				<div style='position: relative;width:100%;height: 1px;'>
+				<div style='position: relative;margin-left:5%;width:90%;height: 1px;'>
 					<div id='fuzzysuggestions' style='visibility:hidden;overflow-y:scroll;z-index: 5;position: absolute;top:0;left: 0;right:0;margin-left: auto;margin-right:auto;max-height:80vh;background:white;border: 1px solid black;'>
 					</div>
 				</div>
