Changed spelling like indicated by #245

--- a/web/catalogue/collections/template.html
+++ b/web/catalogue/collections/template.html
@@ -27,7 +27,7 @@
 	{% include "../../template_navbar.html" %}	
 	<header>
 	<h1>Catalogue: Collection</h1>
-	<p>{{ length(pillars) }} diffrent collections</p>
+	<p>{{ length(pillars) }} different collections</p>
 	{% include "../search_template.html" %}
 	</header>
 	
