--- a/web/books/metadata_template.html
+++ b/web/books/metadata_template.html
@@ -22,10 +22,29 @@
             <h1> {{ show }} </h1>
             <nav id='booklcontentlink'>
                 <ul>
+                    <li><a href="/catalogue/books/">Other books in catalogue</a></li>
+                    <li><a href="/catalogue/authors/">Other authors in catalogue</a></li>
+                        <ul>
+                            {% for author in authors %}
+                            <li><a href="/catalogue/authors/{{ author.key }}/">{{author.key}}</a></li>
+                            {% endfor %}
+                        </ul>
+                    <li><a href="/catalogue/collections/">Other collections in catalogue</a></li>
+                        <ul>
+                            {% for collection in collections %}
+                            <li><a href="/catalogue/collections/{{ collection.key }}/">{{ collection.name }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    <li><a href="/catalogue/years/">Other years in catalogue</a></li>
+                        {% if hasDate %}
+                        <ul>
+                            <li><a href="/catalogue/years/{{ date }}/">{{ date }}</a></li>
+                        </ul>
+                        {% endif %}
+                
                     {% if hasContent %}
                     <li><a href="/books/{{ key }}/pages" rel="search">Pages in this book</a></li>
                     {% endif %}
-                    <li><a href="/catalogue/books/">Other books in catalogue</a></li>
 
                 </ul>
             </nav>
@@ -48,7 +67,7 @@
                     <span itemprop="name">
                         <ul>
                             {% for author in authors %}
-                            <li>{{ author }}</li>
+                            <li>{{ author.name }}</li>
                             {% endfor %}
                         </ul>
                     </span>
