Basic work on #206, creating now a very basic bibliography but does not differentiate between author types etc.

--- a/web/books/metadata_template.html
+++ b/web/books/metadata_template.html
@@ -103,6 +103,11 @@
                     <td><dt id="bib"><b>Bibliography: </b></dt></td>
                     <td><dd>{{ bib }}</dd></td>
                 </tr>
+                <tr>
+                    <td><dt id="bib"><b>Own created bibliography: </b></dt></td>
+                    <td><dd>{{ bib_own }}</dd></td>
+                </tr>
+
                 </table>
 
 	        </dl>
