Fixed #255, no all books in the collections show if they have or have not an ocr associated with them

--- a/web/catalogue/collections/template_collection.html
+++ b/web/catalogue/collections/template_collection.html
@@ -33,8 +33,12 @@
 	</header>
 	
     <ol>
-    {% for book in books %}
-    <li class="searchable_item"><a href="/books/{{ book.id}}/">{{ book.title}}</a><span class="metadata">{{book.bib}}</span></li>
-    {% endfor %}
+	{% for pg in books %}
+	{% if pg.has_ocr %}
+	<li class="searchable_item"><a title="This book has an OCR, which means it contains a searchable approximation of the text inside the book and possible some images" href="/books/{{ pg.id }}/" data-key="{{ pg.id }}"><span class='bookhasocr'>[OCR]</span>{{ pg.title }}</a><span class="metadata">{{ pg.bib }}</span></li>
+	{% else %}
+	    <li class="searchable_item"><a href="/books/{{ pg.id }}/" data-key="{{ pg.id }}">{{ pg.title }}</a><span class="metadata">{{ pg.bib }}</span></li>
+	{% endif %}
+	{% endfor %}
     </ol>
 </body>
