--- a/web/books/metadata_template.html
+++ b/web/books/metadata_template.html
@@ -26,7 +26,9 @@
                     <li><a href="/catalogue/authors/">Other authors in catalogue</a></li>
                         <ul>
                             {% for author in authors %}
-                            <li><a href="/catalogue/authors/{{ author.key }}/">{{author.key}}</a></li>
+                                {% if author.isAuthor %}
+                                    <li><a href="/catalogue/authors/{{ author.key }}/">{{author.key}}</a></li>
+                                {% endif %}
                             {% endfor %}
                         </ul>
                     <li><a href="/catalogue/collections/">Other collections in catalogue</a></li>
@@ -67,7 +69,7 @@
                     <span itemprop="name">
                         <ul>
                             {% for author in authors %}
-                            <li>{{ author.name }}</li>
+                            <li>{{ author.name }} ({{author.type}})</li>
                             {% endfor %}
                         </ul>
                     </span>
