Fixed #258, This commit added breadcrumbs to all catalogue sites which did not have one yet and fixed the css to make it look a bit less stupid

--- a/web/catalogue/collections/template.html
+++ b/web/catalogue/collections/template.html
@@ -26,6 +26,9 @@
 <body>
 	{% include "../../template_navbar.html" %}	
 	<header>
+	<ul>
+	    <li><a href="../" rel="index up">Catalogue</a></li>
+	</ul> 
 	<h1>Catalogue: Collection</h1>
 	<p>{{ length(pillars) }} different collections</p>
 	{% include "../search_template.html" %}
