--- a/web/catalogue/books/template.html
+++ b/web/catalogue/books/template.html
@@ -25,6 +25,9 @@
 <body>
 	{% include "../../template_navbar.html" %}	
 	<header>
+	<ul>
+	    <li><a href="../" rel="index up">Catalogue</a></li>
+	</ul> 
 	<h1>Index of all Books</h1>
 	<p>{{ length(books) }} books</p>
 	{% include "../search_template.html" %}
