--- a/web/catalogue/years/template_year.html
+++ b/web/catalogue/years/template_year.html
@@ -26,6 +26,9 @@
 <body>
 	{% include "../../template_navbar.html" %}	
 	<header>
+	<ul>
+	    <li><a href="../" rel="index up">Years</a></li>
+	</ul> 
 	<h1>Book published in {{ year }}</h1>
 	<p>Found {{ length(books) }} books from the year {{ year }}</p>
 	{% include "../search_template.html" %}
