Added a few more breadcrumbs to adhere to standards

--- a/web/catalogue/template.html
+++ b/web/catalogue/template.html
@@ -26,6 +26,9 @@
 <body>
 	{% include "../template_navbar.html" %}
 	<header>
+	<ul>
+	    <li><a href="../" rel="index up">Clas digital</a></li>
+	</ul> 
 	<h1>Catalogue categories</h1>
 	<p>{{ length(pages) }} categories</p>
 	{% include "search_template.html" %}
