--- a/web/catalogue/years/template.html
+++ b/web/catalogue/years/template.html
@@ -28,8 +28,12 @@
 	{% include "../../template_navbar.html" %}	
 	<header>
 	<ul>
+	    <li><a href="/">Clas digital</a></li>
+	    <ul>
 	    <li><a href="../" rel="index up">Catalogue</a></li>
-	</ul> 
+	    </ul>
+	</ul>
+
 	<h1>Catalogue: Years</h1>
 	<p>Found books from {{ length(years) }} distinct years</p>
 	{% include "../search_template.html" %}
