--- a/web/catalogue/books/template.html
+++ b/web/catalogue/books/template.html
@@ -27,7 +27,10 @@
 	{% include "../../template_navbar.html" %}	
 	<header>
 	<ul>
+	    <li><a href="/">Clas digital</a></li>
+	    <ul>
 	    <li><a href="../" rel="index up">Catalogue</a></li>
+	    </ul>
 	</ul> 
 	<h1>Index of all Books</h1>
 	<p>{{ length(books) }} books</p>
