--- a/web/catalogue/collections/template.html
+++ b/web/catalogue/collections/template.html
@@ -28,8 +28,11 @@
 	{% include "../../template_navbar.html" %}	
 	<header>
 	<ul>
+	    <li><a href="/">Clas digital</a></li>
+	    <ul>
 	    <li><a href="../" rel="index up">Catalogue</a></li>
-	</ul> 
+	    </ul>
+	</ul>
 	<h1>Catalogue: Collection</h1>
 	<p>{{ length(pillars) }} different collections</p>
 	{% include "../search_template.html" %}
