--- a/web/catalogue/years/template_year.html
+++ b/web/catalogue/years/template_year.html
@@ -28,8 +28,14 @@
 	{% include "../../template_navbar.html" %}	
 	<header>
 	<ul>
-	    <li><a href="../" rel="index up">Years</a></li>
-	</ul> 
+	    <li><a href="/">Clas digital</a></li>
+	    <ul>
+		<li><a href="/catalogue/">Catalogue</a></li>
+		<ul>
+		    <li><a href="../" rel="index up">Years</a></li>
+		</ul>
+	    </ul>
+	</ul>
 	<h1>Book published in {{ year }}</h1>
 	<p>Found {{ length(books) }} books from the year {{ year }}</p>
 	{% include "../search_template.html" %}
