--- a/web/books/metadata_template.html
+++ b/web/books/metadata_template.html
@@ -19,40 +19,48 @@
 	    {% include "../template_navbar.html" %}
 
         <div class="metadata">
-            <h1> {{ show }} </h1>
-            <nav id='booklcontentlink'>
-                <ul>
-                    <li><a href="/">Clas Digital</a></li>
-                        <ul>
-                            <li><a href="/catalogue/books/">Other books in catalogue</a></li>
-                            <li><a href="/catalogue/authors/">Other authors in catalogue</a></li>
-                                <ul>
-                                    {% for author in authors %}
-                                        {% if author.isAuthor %}
-                                            <li><a href="/catalogue/authors/{{ author.key }}/">{{author.name}}</a></li>
-                                        {% endif %}
-                                    {% endfor %}
-                                </ul>
-                            <li><a href="/catalogue/collections/">Other collections in catalogue</a></li>
-                                <ul>
-                                    {% for collection in collections %}
-                                    <li><a href="/catalogue/collections/{{ collection.key }}/">{{ collection.name }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                            <li><a href="/catalogue/years/">Other years in catalogue</a></li>
-                                {% if hasDate %}
-                                <ul>
-                                    <li><a href="/catalogue/years/{{ date }}/">{{ date }}</a></li>
-                                </ul>
-                                {% endif %}
-                        
-                            {% if hasContent %}
-                            <li><a href="/books/{{ key }}/pages" rel="search">Pages in this book</a></li>
-                            {% endif %}
+            <nav id='booklcontentlink' class="breadcrumb">
+                    <ol >
+                        <li><a href="/">Clas Digital</a></li>
+                        <li><a href="/catalogue/">Catalogue</a></li>
+                        <li><a href="/catalogue/books/">Books</a></li>
+                    </ol>
+                    {% for author in authors %}
+                        {% if author.isAuthor %}
+                        <ol>
+                            <li><a href="/">Clas Digital</a></li>
+                            <li><a href="/catalogue/">Catalogue</a></li>
+                            <li><a href="/catalogue/authors/">Authors</a></li>
 
-                        </ul>
-                </ul>
+                            <li><a href="/catalogue/authors/{{ author.key }}/">{{author.name}}</a></li>
+                        </ol>
+                        {% endif %}
+                    {% endfor %}
+                    {% if hasDate %}
+                    <ol>
+                        <li><a href="/">Clas Digital</a></li>
+                        <li><a href="/catalogue/">Catalogue</a></li>
+                        <li><a href="/catalogue/years/">Years</a></li>
+                        <li><a href="/catalogue/years/{{ date }}/">{{ date }}</a></li>
+                    </ol>
+                    {% endif %}
+
+                    {% for collection in collections %}
+                    <ol>
+                        <li><a href="/">Clas Digital</a></li>
+                        <li><a href="/catalogue/">Catalogue</a></li>
+                        <li><a href="/catalogue/collection/">Collections</a></li>
+                        <li><a href="/catalogue/collections/{{ collection.key }}/">{{ collection.name }}</a></li>
+                    </ol>
+                    {% endfor %}
+
             </nav>
+
+            <h1> {{ show }} </h1>
+            {% if hasContent %}
+                <li><a href="/books/{{ key }}/pages" rel="search">Pages in this book</a></li>
+            {% endif %}
+
             <section>
             <dl>
                 <table>
