--- a/web/catalogue/collections/template.html
+++ b/web/catalogue/collections/template.html
@@ -25,22 +25,29 @@
 </head>
 
 <body>
-	{% include "../../template_navbar.html" %}	
 	<header>
-	<ol>
-	    <li><a href="/">Clas digital</a></li>
-	    <li><a href="../" rel="index up">Catalogue</a></li>
-	</ol>
-	<h1>Catalogue: Collection</h1>
-	<p>{{ length(pillars) }} different collections</p>
-	{% include "../search_template.html" %}
+	{% include "../../template_navbar.html" %}	
 	</header>
-	
-    <ol>
-    {% for pillar in pillars %}
-    <li class="searchable_item"><a href="/catalogue/collections/{{ pillar.key }}/">{{ pillar.name}}<a></li>
-    {% endfor %}
-    </ol>
+
+	<nav aria-label="breadcrumb">
+	    <ol class="breadcrumb">
+		<li class="breadcrumb-item"><a href="/">Clas digital</a></li>
+		<li class="breadcrumb-item"><a href="../" rel="index up">Catalogue</a></li>
+		<li class="breadcrumb-item active">Collections</li>
+	    </ol>
+	</nav>
+	<article class="main">
+
+	    <h1>Catalogue: Collection</h1>
+	    <p>{{ length(pillars) }} different collections</p>
+	    {% include "../search_template.html" %}
+
+	    <ol>
+		{% for pillar in pillars %}
+		<li class="searchable_item"><a href="/catalogue/collections/{{ pillar.key }}/">{{ pillar.name}}<a></li>
+		{% endfor %}
+	    </ol>
+	</article>
 </body>
 
 
