Error message on server crash sent as json, for better functionality and to still serve search page.

--- a/web/search_template.html
+++ b/web/search_template.html
@@ -116,7 +116,10 @@
         <div>
             <div ><ul id="hitList" class="searchResults"> </ul> </div>
             <div><hr id="bottomBorder" style="padding:0;display:none;"></div>
-            <div class="linkcontainerDiv"><ul id="linkcontainer" class="linkcontainer"></ul> </div>
+            <div class="linkcontainerDiv">
+              <a id="server_crash_warning" style="display:none;">Please try again later</a>
+              <ul id="linkcontainer" class="linkcontainer"></ul> 
+            </div>
             <div id="next_last">
                 <a id="prev" class="prev_next">prev</a>
                 <a id="next" class="prev_next">next</a>
