--- a/web/Search.html
+++ b/web/Search.html
@@ -104,6 +104,17 @@
                 </select>
                 </label>
             </div>
+
+            <div class='selectdiv' style="display:inline-block;">
+                <label>
+                <select id='scope' onchange='SetScope(this);return true;'>
+                    <option value=''>All</option>
+                    <option value='corpus'>Only with corpus</option>
+                    <option value='metadata'>Only in metadata</option>
+                </select>
+                </label>
+            </div>
+
             <div class='selectdiv' style="display:inline-block;">
                 <label>
                 <select id='fuzzyness' onchange='ResetFocus();return true;'>
